@@ -1,3 +1,10 @@
+2018-11-16  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* pop3dserver.c (readpop3dlist): Be able to update
+	courierpop3dsizelist from version 2 to 3 in place.
+	(do_retr): Instead of returning an ERR to a non-Unicode client,
+	handle Unicode messages by wrapping them as an attachment.
+
 5.0.2
 
 2018-10-27  Sam Varshavchik  <mrsam@courier-mta.com>
